--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/future_medan
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddlAuto=update
+spring.jpa.openInView=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
