--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# Application Configuration
+spring.application.name=future-medan
+server.servlet.context-path=/${spring.application.name}
+server.port=8080
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/future_medan
 spring.datasource.username=postgres
-spring.datasource.password=admin123
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddlAuto=update
 spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
