Edited wrong relation between Entities

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/future_medan
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=syntialai
 spring.jpa.hibernate.ddlAuto=update
 spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
