--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+log4j.logger.org.springframework.web=INFO
+
+## App Properties
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
