--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/future_medan
 spring.datasource.username=postgres
-spring.datasource.password=admin123
-spring.jpa.hibernate.ddlAuto=create
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddlAuto=update
 spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
