--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 log4j.logger.org.springframework.web=INFO
 
