make store image or pdf functionality

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/future_medan
 spring.datasource.username=postgres
 spring.datasource.password=admin123
-spring.jpa.hibernate.ddlAuto=create
+spring.jpa.hibernate.ddlAuto=update
 spring.jpa.openInView=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -33,3 +33,10 @@ log4j.logger.org.springframework.web=INFO
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+# max file size
+spring.servlet.multipart.max-file-size=10MB
+# max request size
+spring.servlet.multipart.max-request-size=10MB
+# files storage location (stores all files uploaded via REST API)
+storage.location=./uploads
