--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -39,4 +39,5 @@ spring.servlet.multipart.max-file-size=10MB
 # max request size
 spring.servlet.multipart.max-request-size=10MB
 # files storage location (stores all files uploaded via REST API)
-storage.location=./uploads
+storage.location-book=./uploads/books
+storage.location-image=./uploads/images
