change images path and add validate token api

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -40,4 +40,4 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # files storage location (stores all files uploaded via REST API)
 storage.location-book=./uploads/books
-storage.location-image=./uploads/images
+storage.location-image=./src/main/resources/static/images
