--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Mail Service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=youremail
-spring.mail.password=yourpassword
+spring.mail.username=syntialaii407@gmail.com
+spring.mail.password=siwonestabi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
