--- a/app/pom.xml
+++ b/app/pom.xml
@@ -18,6 +18,18 @@
         <java.version>1.8</java.version>
         <jjwt.version>0.9.0</jjwt.version>
         <swagger.version>2.8.0</swagger.version>
+        <sonar.exclusions>
+            **/payload/**,
+            **/models/**,
+            **/configurations/**,
+            **/constants/**,
+            **/repositories/**,
+            **/seeders/**,
+            **/storage/**,
+            **/exceptions/**,
+            **/security/**,
+            **/BackendApplication.java
+        </sonar.exclusions>
     </properties>
 
     <dependencyManagement>
